crates/test-ui/ui/msg_send_id_invalid_error.stderr
error[E0308]: mismatched types
 --> ui/msg_send_id_invalid_error.rs
  |
  |     let _: () = unsafe { msg_send_id![obj, a: _] };
  |                          ^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `Result<Retained<_>, Retained<_>>`
  |
  = note: expected unit type `()`
                  found enum `Result<Retained<_>, Retained<_>>`
  = note: this error originates in the macro `$crate::__msg_send_id_helper` which comes from the expansion of the macro `msg_send_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> ui/msg_send_id_invalid_error.rs
  |
  |         unsafe { msg_send_id![NSObject::alloc(), initWithError: _] };
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Result<Retained<AnyObject>, ...>`, found `Result<Retained<NSObject>, ...>`
  |
  = note: expected enum `Result<Retained<AnyObject>, Retained<NSObject>>`
             found enum `Result<Retained<NSObject>, Retained<_>>`
  = note: this error originates in the macro `$crate::__msg_send_id_helper` which comes from the expansion of the macro `msg_send_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Option<Retained<_>> as MaybeUnwrap>::Input == Allocated<_>`
 --> ui/msg_send_id_invalid_error.rs
  |
  |         unsafe { msg_send_id![NSObject::class(), allocWithError: _] };
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Allocated<_>`, found `Option<Retained<_>>`
  |
  = note: expected struct `Allocated<_>`
               found enum `Option<Retained<_>>`
note: required by a bound in `send_message_id_error`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send_id.rs
  |
  |     unsafe fn send_message_id_error<A, E, R>(obj: T, sel: Sel, args: A) -> Result<R, Retained<E>>
  |               --------------------- required by a bound in this associated function
...
  |         Option<R>: MaybeUnwrap<Input = U>,
  |                                ^^^^^^^^^ required by this bound in `MsgSendId::send_message_id_error`
  = note: this error originates in the macro `$crate::__msg_send_id_helper` which comes from the expansion of the macro `msg_send_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> ui/msg_send_id_invalid_error.rs
  |
  |         unsafe { msg_send_id![NSObject::class(), allocWithError: _] };
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Result<Allocated<NSObject>, ...>`, found `Result<Retained<_>, Retained<_>>`
  |
  = note: expected enum `Result<Allocated<NSObject>, Retained<NSObject>>`
             found enum `Result<Retained<_>, Retained<_>>`
  = note: this error originates in the macro `$crate::__msg_send_id_helper` which comes from the expansion of the macro `msg_send_id` (in Nightly builds, run with -Z macro-backtrace for more info)
